인스턴스 단위 ini완료